MP1.html:UPDATED
Updated

--- a/Index.html
+++ b/Index.html
@@ -162,14 +162,16 @@
               <div class="col-xl-4" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon-box d-flex flex-column justify-content-center align-items-center">
                   <i class="bi bi-gem"></i>
+
                   <h4>Barka-DREWS</h4>
                   <p> It feels good to have your ‘barkada’. They'll be with you in times of fun, sadness, laughs, and of course, on the food trip!
                       <br>
                     With DREWS-Grills&Wings, even if they’re full, when given the chance to get another wing, they will surely crave for more! <br>Through chicken wings, the ‘barkada’ becomes complete.
                     <br>
-                    Come and visit the nearest Monster Wings branch with your ‘barkada’! <br> We assure you, every bite is a treat!
                     <br>
+                    Come and visit the DREWS-Grills&Wings with your ‘barkada’! <br> We assure you, every bite is a treat!
                     <br>
+                    
                     #Barka-DREWS #CraveForMore
                     #WhatsYourFlavor</p>
                 </div>
@@ -179,19 +181,28 @@
                 <div class="icon-box d-flex flex-column justify-content-center align-items-center">
                   <i class="bi bi-inboxes"></i>
                   <h4>Product Preparation</h4>
-                  <p>At Monster Wings, we believe that every individual deserves crispy, tender, and flavorful chicken wings that correspond to their taste.
+                  <p>At DREWS-Grills&Wings, we believe that every individual deserves crispy, tender, and flavorful chicken wings that correspond to their taste.
                       <br>
                     With 10 flavors to choose from: <br>
                     <br>
                     • Garlic Parmesan
+                    <br>
                     • Buffalo Wings
+                    <br>
                     • Teriyaki
+                    <br>
                     • Lemon Garlic
+                    <br>
                     • Bharbie Koh (Barbecue)
+                    <br>
                     • Siracha
+                    <br>
                     • Salt and Pepper
+                    <br>
                     • Creamy Salted Egg
+                    <br>
                     • Honey Mustard
+                    <br>
                     • Cheezy Jalapeno
                       <br>
                       <br>
