--- a/Index.html
+++ b/Index.html
@@ -151,7 +151,10 @@
                   <i class="bi bi-clipboard-data"></i>
                   <h4>Company Profile </h4>
                   <p>With over the years experience in the food industry, Drews-Grills&Wings
-                    continues to be the most innovative and crowd favorite. From being the first ever flavored chicken wings, cloud based POS system, and one of a kind marketing ideas, we will surely grow more branches in the future.
+                    continues to be the most innovative and crowd favorite.
+                    <br>
+                    <br>
+                    From being the first ever flavored chicken wings, cloud based POS system, and one of a kind marketing ideas, we will surely grow more branches in the future.
                     <br>
                     <br>
                     The company’s mission is to empower its
@@ -162,16 +165,14 @@
               <div class="col-xl-4" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon-box d-flex flex-column justify-content-center align-items-center">
                   <i class="bi bi-gem"></i>
-
                   <h4>Barka-DREWS</h4>
                   <p> It feels good to have your ‘barkada’. They'll be with you in times of fun, sadness, laughs, and of course, on the food trip!
                       <br>
                     With DREWS-Grills&Wings, even if they’re full, when given the chance to get another wing, they will surely crave for more! <br>Through chicken wings, the ‘barkada’ becomes complete.
                     <br>
+                    Come and visit the nearest Monster Wings branch with your ‘barkada’! <br> We assure you, every bite is a treat!
                     <br>
-                    Come and visit the DREWS-Grills&Wings with your ‘barkada’! <br> We assure you, every bite is a treat!
                     <br>
-                    
                     #Barka-DREWS #CraveForMore
                     #WhatsYourFlavor</p>
                 </div>
@@ -205,8 +206,7 @@
                     <br>
                     • Cheezy Jalapeno
                       <br>
-                      <br>
-                    An experience that will surely bind them all together as a family!</p>
+                      <br>nd them all together as a family!</p>
                 </div>
               </div><!-- End Icon Box -->
 
