MP1:index-Updated
Index Updated

--- a/Index.html
+++ b/Index.html
@@ -183,7 +183,7 @@
                   <h4>Product Preparation</h4>
                   <p>At DREWS-Grills&Wings, we believe that every individual deserves crispy, tender, and flavorful chicken wings that correspond to their taste.
                       <br>
-                    With 10 flavors to choose from: <br>
+                    With 10 flavors to choose from: 
                     <br>
                     • Garlic Parmesan
                     <br>
@@ -205,7 +205,7 @@
                     <br>
                     • Cheezy Jalapeno
                       <br>
-                      <br>nd them all together as a family!</p>
+                    <p>An austere experience, where richness is lived through the purity of ingredients in a modern, fast-casual setting.</p>
                 </div>
               </div><!-- End Icon Box -->
 
@@ -430,7 +430,7 @@
 
         <div class="row g-0">
 
-          <div class="col-lg-4 reservation-img" style="background-image: url(assets/img/Dine1.jpg) data-aos="zoom-out" data-aos-delay="200"></div>
+          <div class="col-lg-4 reservation-img" style="background-image: url(assets/img/Dine2.JPG) "data-aos="zoom-out" data-aos-delay="200"></div>
 
           <div class="col-lg-8 d-flex align-items-center reservation-form-bg">
             <form action="forms/book-a-table.php" method="post" role="form" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
