--- a/Index.html
+++ b/Index.html
@@ -38,8 +38,8 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 img src="assets/img/Drews Logo.jpg" alt="Logo"><span></span></h1>
+        <img src="assets/img/logo/Drews Logo.jpg" alt="">
+        <h1 ><span>Drews-Grills&Wings</span></h1>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -92,7 +92,7 @@
         </div>
 
         <div class="row gy-4">
-          <div class="col-lg-7 position-relative about-img" style="background-image: url(assets/img/about.jpg) ;" data-aos="fade-up" data-aos-delay="150">
+          <div class="col-lg-7 position-relative about-img" style="background-image: url(assets/img/ChickenWIngsCover3.JPG) ;" data-aos="fade-up" data-aos-delay="150">
             <div class="call-us position-absolute">
               <h4>Call us and Book a Table</h4>
               <p>+63 917123456789</p>
@@ -224,8 +224,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Our Menu</h2>
-          <p>Check Our <span>Yummy Menu</span></p>
+          <h2>Menu</h2>
+          <p>Explore your <span> options with DREWS Menu</span></p>
         </div>
 
         <ul class="nav nav-tabs d-flex justify-content-center" data-aos="fade-up" data-aos-delay="200">
@@ -279,11 +279,12 @@
                     <div class="testimonial-content">
                       <p>
                         <i class="bi bi-quote quote-icon-left"></i>
-                        Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                        Great taste 💯 Pasok sa sa mga mahilig mag Chicken Wings trip ng barkada! Highly recommended para sainyo! Lalo na this Pandemic na hindi makalabas ng bahay para kumain sa mga Resto with Chicken Wings! Dito kana. 😉
+
                         <i class="bi bi-quote quote-icon-right"></i>
                       </p>
-                      <h3>Saul Goodman</h3>
-                      <h4>Ceo &amp; Founder</h4>
+                      <h3>Arvin John Mananzan </h3>
+                      <h4>Ceo &amp; Founder Clothing Company</h4>
                       <div class="stars">
                         <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                       </div>
@@ -303,10 +304,10 @@
                     <div class="testimonial-content">
                       <p>
                         <i class="bi bi-quote quote-icon-left"></i>
-                        Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                        The best ang chicken wings dito mga tol, mga besshy, mga mumsh, mga pre.. Freshly cooked.. Sobrang panalo.. Puwede rin samahan ng beer.. Yung sliders nila sobrang sarap. For 170 solb na SOLB na. Saka mga naghahanap ng chicken and beer Dyan.. Alam na this.. Sobrang responsive ng may ari...
                         <i class="bi bi-quote quote-icon-right"></i>
                       </p>
-                      <h3>Sara Wilsson</h3>
+                      <h3>Francis H. Aquino</h3>
                       <h4>Designer</h4>
                       <div class="stars">
                         <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
@@ -327,10 +328,11 @@
                     <div class="testimonial-content">
                       <p>
                         <i class="bi bi-quote quote-icon-left"></i>
-                        Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                        I was impressed with the menu of Drews. Good for meryenda and late night snack. Super nagustuhan ko ung burger nila kasi hindi nakakaumay with the size of it at tsaka napakaflavorful. I wasn't able to check ung laman ng burger kasi pagdating ng delivery kanina kumain na agad ako pero kung tama ako  ginrilled nila ung patty and the combination of the bread was awesome! Then we have the friee that so good parang fries ng mga fast food chains. Lastly,  ung Buffalo wings which was really flavorful as well. Nasatisy ung cravings ko kanina and that's thank to Drews!  Will order again next time. 
+                            #SupportSmallBusiness
                         <i class="bi bi-quote quote-icon-right"></i>
                       </p>
-                      <h3>Jena Karlis</h3>
+                      <h3>Ernest Ajero</h3>
                       <h4>Store Owner</h4>
                       <div class="stars">
                         <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
@@ -351,10 +353,11 @@
                     <div class="testimonial-content">
                       <p>
                         <i class="bi bi-quote quote-icon-left"></i>
-                        Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                        kasalanan nya to eh!!! kasalanan ng patty to! ang SARAP nya 🍔🍔🍔 its sumthin' ul never have a 2nd thought of buying again and share it to ur family and friends.
+                                and not to forget the chicken wings! well walang masasayang sa binayad mo, what u see, u will get beyond ur expectation.
                         <i class="bi bi-quote quote-icon-right"></i>
                       </p>
-                      <h3>John Larson</h3>
+                      <h3>Kat Pozon </h3>
                       <h4>Entrepreneur</h4>
                       <div class="stars">
                         <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
@@ -425,7 +428,7 @@
 
         <div class="section-header">
           <h2>Book A Table</h2>
-          <p>Book <span>Your Stay</span> With Us</p>
+          <p>Order/<span>Book your stay</span> With Us</p>
         </div>
 
         <div class="row g-0">
@@ -469,7 +472,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your booking request was sent. We will call back or send an Email to confirm your reservation. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Book a Table</button></div>
+              <div class="text-center"><button type="submit">Get your Reservation / Order Now</button></div>
             </form>
           </div><!-- End Reservation Form -->
 
@@ -482,10 +485,10 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Contact</h2>
-          <p>Whats on your mind? <span>Contact Us</span></p>
+          <h2>CONTACT US</h2>
+          <p>Whats on your mind? <span>Talk to Us</span></p>
         </div>
-
+       
         <div class="mb-3">
           <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3859.1518242453294!2d121.06817860000001!3d14.704004799999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b099d2d848d1%3A0x94d94c8028fd380c!2sDatsun%2C%20Novaliches%2C%20Quezon%20City%2C%20Metro%20Manila!5e0!3m2!1sen!2sph!4v1695810164309!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">frameborder="0" allowfullscreen </iframe>
         </div><!-- End Google Maps -->
