--- a/Index.html
+++ b/Index.html
@@ -639,9 +639,9 @@
         <div class="col-lg-3 col-md-6 footer-links">
           <h4>Follow Us</h4>
           <div class="social-links d-flex">
+            <a href="https://www.facebook.com/Drewsgrillsandwings" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/drewsgrillsandwings/" class="instagram"><i class="bi bi-instagram"></i></a>
             <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
             <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
