--- a/Index.html
+++ b/Index.html
@@ -273,17 +273,6 @@
               </div><!-- Menu Item --><!-- Menu Item -->
 
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/Images/Honey Garlic.jpg" class="glightbox"><img src="assets/img/Images/Honey BBQ.JPG" class="menu-img img-fluid" alt=""></a>
-                <h4>BarbieKoh</h4>
-                <p class="ingredients">
-                  Sweet & BBQ Flavor
-                </p>
-                <p class="price">
-                  Php 125
-                </p>
-              </div><!-- Menu Item -->
-
-              <div class="col-lg-4 menu-item">
                 <a href="assets/img/Images/Sweet and Spicy Sriracha.jpg" class="glightbox"><img src="assets/img/Images/Buffalo.JPG" class="menu-img img-fluid" alt=""></a>
                 <h4>Chichiracha</h4>
                 <p class="ingredients">
@@ -295,10 +284,10 @@
               </div><!-- Menu Item -->
 
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/Images/Garlic Parmesan2.JPG" class="glightbox"><img src="assets/img/Images/Garlic Parmesan.jpg" class="menu-img img-fluid" alt=""></a>
-                <h4>Garlic Parmesan</h4>
+                <a href="assets/img/Images/Honey Garlic.jpg" class="glightbox"><img src="assets/img/Images/Honey BBQ.JPG" class="menu-img img-fluid" alt=""></a>
+                <h4>BarbieKoh</h4>
                 <p class="ingredients">
-                  Cheezy Garlic Parmesan Flavor
+                  Sweet & BBQ Flavor
                 </p>
                 <p class="price">
                   Php 125
@@ -310,6 +299,17 @@
                 <h4>Buffalo Wings</h4>
                 <p class="ingredients">
                   Extra Spicy Flavor
+                </p>
+                <p class="price">
+                  Php 125
+                </p>
+              </div><!-- Menu Item -->
+
+              <div class="col-lg-4 menu-item">
+                <a href="assets/img/Images/Garlic Parmesan2.JPG" class="glightbox"><img src="assets/img/Images/Garlic Parmesan.jpg" class="menu-img img-fluid" alt=""></a>
+                <h4>Garlic Parmesan</h4>
+                <p class="ingredients">
+                  Cheezy Garlic Parmesan Flavor
                 </p>
                 <p class="price">
                   Php 125
@@ -743,9 +743,9 @@
               <div class="member-img">
                 <img src="assets/img/chefs/chefs-1 Boy.JPG" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href="https://twitter.com/MasterChefLogro"><i class="bi bi-twitter"></i></a>
+                  <a href="https://www.facebook.com/chefboylogroOFFICIAL/"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/chefboylogro7/"><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
@@ -762,9 +762,9 @@
               <div class="member-img">
                 <img src="assets/img/chefs/chefs-2 Arwan.JPG" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href="https://twitter.com/erwanheussaff"><i class="bi bi-twitter"></i></a>
+                  <a href="https://www.facebook.com/XelebErwan/"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/erwan/"><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
@@ -782,9 +782,9 @@
               <div class="member-img">
                 <img src="assets/img/chefs/chefs-3 Ninong Ry.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href="https://twitter.com/NinongRy"><i class="bi bi-twitter"></i></a>
+                  <a href="https://www.facebook.com/ninongry"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/ninongry/"><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
